--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,6 +7,6 @@ log4j.appender.Console.layout.ConversionPattern= [%-5p]-[%d{yyyy-MM-dd HH:mm:ss}
 #将日志信息输出到操作系统D盘根目录下的log.log文件中
 #每天产生一个日志文件
 log4j.appender.RollingFile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.RollingFile.File=D://log.log
+#log4j.appender.RollingFile.File=D://log.log
 log4j.appender.RollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.RollingFile.layout.ConversionPattern=%d [%t] %-5p %-40.40c %X{traceId}-%m%n
