--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,9 +21,9 @@ spring:
   #  Redis配置
   redis:
     database: 0
-    host: 119.3.251.42
+    host: 127.0.0.1
     port: 6379
-    password: "123456"
+    password:
     jedis:
       pool:
         max-idle: 8   #连接池中最大空闲连接
