--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
-    username: ems
-    password: 8wXG4hBzdwAPXrtk
-    url: jdbc:mysql://119.3.251.42:3306/ems?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
+    username: root
+    password: 123456
+    url: jdbc:mysql://123.60.63.149:3306/ems?characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8&allowPublicKeyRetrieval=True
     driver-class-name: com.mysql.jdbc.Driver
 
     #   数据源其他配置
